<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:scaleType="fitEnd"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="gravity" app:layout_constraintEnd_toStartOf="@+id/textTitle"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            android:layout_gravity="right"
            app:layout_constraintBottom_toBottomOf="@+id/textTitle" app:layout_constraintTop_toTopOf="@+id/textTitle"/>

    <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:text="@string/app_name"
            android:textAlignment="viewStart"
            android:textColor="#ccc"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="72dp"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintHorizontal_bias="0.727"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" android:textStyle="bold" android:layout_marginStart="4dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/userPassword"
            app:layout_constraintTop_toBottomOf="@+id/userEmail" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="Password"
            android:padding="12dp" android:background="@android:color/white"
            android:layout_marginTop="24dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Email"
            android:padding="12dp" android:background="@android:color/white" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:layout_marginTop="200dp" app:layout_constraintTop_toTopOf="parent"/>


    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent" android:progressTint="@color/colorPrimary"/>

    <Button
            android:text="Sign Up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@null"
            android:id="@+id/signUp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/userPassword"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/logIn" app:cornerRadius="0dp"
            style="?android:attr/borderlessButtonStyle"/>

    <Button
            android:text="Log In"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/logIn"
            android:padding="12dp"
            android:background="@drawable/stroke"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/userPassword"
            app:layout_constraintStart_toEndOf="@+id/signUp" android:layout_marginStart="8dp" app:cornerRadius="0dp"
            style="?android:attr/borderlessButtonStyle"/>

    <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/signUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>