<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/item_save"
            android:title="@string/menu_entry_save"
            android:icon="@drawable/outline_check_24"
            app:showAsAction="always"/>

    <item
            android:id="@+id/item_delete"
            android:title="@string/menu_entry_delete"
            android:icon="@drawable/outline_close_24"
            app:showAsAction="always"/>

</menu>