<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/destination_home"
        android:icon="@drawable/outline_grain_24"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/destination_entry"
        android:icon="@drawable/outline_radio_button_checked_24"
        android:title="@string/menu_today"/>

    <item
        android:id="@+id/destination_overview"
        android:icon="@drawable/outline_date_range_24"
        android:title="@string/menu_overview"/>

</menu>