<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/empty"
            android:icon="@drawable/outline_more_vert_24"
            app:showAsAction="ifRoom"
            android:title="@string/toolbar_settings">

        <menu>
            <item
                    android:id="@+id/logout"
                    app:showAsAction="ifRoom"
                    android:title="@string/toolbar_logout"/>
        </menu>

    </item>

</menu>