<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
            android:id="@+id/group_main"
            android:checkableBehavior="single">

        <item
                android:id="@+id/destination_home"
                android:icon="@drawable/outline_grain_24"
                android:title="@string/menu_home"/>

        <item
                android:id="@+id/destination_entry"
                android:icon="@drawable/outline_radio_button_checked_24"
                android:title="@string/menu_today"/>

        <item
                android:id="@+id/destination_overview"
                android:icon="@drawable/outline_date_range_24"
                android:title="@string/menu_overview"/>

    </group>

    <group
            android:id="@+id/group_secondary"
            android:checkableBehavior="single">

        <item
                android:id="@+id/destination_users"
                android:icon="@drawable/outline_scatter_plot_24"
                android:title="@string/menu_users"/>

        <item
                android:id="@+id/destination_profile"
                android:icon="@drawable/outline_fiber_manual_record_24"
                android:title="@string/menu_profile"/>
        
    </group>

</menu>